pimoroni (0.9.4) UNRELEASED; urgency=low

  * executable rename to pimoroni
  * preliminary support for logfile

 -- Rogue Marechal <hal@pimoroni.com>  Wed, 16 Nov 2016 00:00:00 +0000

pimoroni (0.9.3) UNRELEASED; urgency=low

  * library check now case insensitive
  * pip uninstall to purge deb inhibitors
  * falls back on whiptail if zenity is not instaled
  * missing products added in

 -- Rogue Marechal <hal@pimoroni.com>  Tue, 15 Nov 2016 00:00:00 +0000

pimoroni (0.9.2) UNRELEASED; urgency=low

  * can probe system and update all installed libs
  * denies execution as superuser
  * link to doc portal added
  * about box added

 -- Rogue Marechal <hal@pimoroni.com>  Sun, 13 Nov 2016 00:00:00 +0000

pimoroni (0.9.1) UNRELEASED; urgency=low

  * link to support forums added

 -- Rogue Marechal <hal@pimoroni.com>  Fri, 21 Oct 2016 00:00:00 +0000

pimoroni (0.9.0) UNRELEASED; urgency=low

  * Functional multi-level dashboard
  * Initial version with Zenity support
  * Whiptail fallback if no X server detected

 -- Rogue Marechal <hal@pimoroni.com>  Wed, 19 Oct 2016 00:00:00 +0000