@@ -1,6 +1,6 @@
 README
 
-The Pimoroni Product Installer is a setup dashboard for Pimoroni add-on boards.
+The Pimoroni Dashboard is a setup tool for Pimoroni add-on boards.
 It provides a familiar GUI for installing product support software, documentation and examples.
 
 Learn more: https://shop.pimoroni.com/
