@@ -1,6 +1,6 @@
 Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: pimoroni
-Source: https://github.com/pimoroni/pimstaller
+Source: https://github.com/pimoroni/dashboard
 
 Files: *
 Copyright: 2016 Pimoroni Ltd <hal@pimoroni.com>
