@@ -1,6 +1,7 @@
 pimoroni (0.9.4) UNRELEASED; urgency=low
 
-  * executable rename to pimoroni
+  * executable rename to pimoroni-dashboard
+  * desktop/menu shortcut use generic terminal call
   * preliminary support for logfile
 
  -- Rogue Marechal <hal@pimoroni.com>  Wed, 16 Nov 2016 00:00:00 +0000
